# pfc-sdk-g2

./: .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: build.yml  docker-image.yml
doc/: add-new-firmware.md
docker/: build.sh
docker/pfc-sdk-g2/configs/wago-pfcXXX/: platformconfig  ptxconfig_pfc_g2  ptxconfig_pfc_g2.old
docker/pfc-sdk-g2/rules/: dropbear.make  firewall-config.make  fwupdate.make  host-ct-make-xml-config.make  liboslinux.make  libpthreadcgroup.make  logrotate.make  rauc.make  rauc_bundle_conf.make  serial_dispatcher.make  sssd-repo-ipk.make  wago-config-000-common.make  wago-config-001-cbm.in  wago-config-004-ipc-msg-header.make  wago-config-005-set-priority.make  wago-demo-012-profinetdemo.make  wago-libs-005-libosal.make  wago-libs-009-libutil.make  wago-libs-012-libloader.make  wago-libs-029-libwc.make  wago-net-001-mdmd.make  wago-net-005-mdmd-ng.make  wago-parameter-service-model-files.make  wago-tools-017-led-server-2.make  wago-tools-017-pfc-diagnostic.make  wbm-ng-plugin-diagnostic.make
docker/pfc-sdk-g2/scripts/sssd-helpers/: make-meta-ipk-sssd.sh
project-template/: Dockerfile  Makefile
ptxproj/: base  init.sh  selected_ptxconfig
ptxproj/configs/wago-pfcXXX/: platformconfig  ptxconfig_pfc_g2  ptxconfig_pfc_g2.diff  ptxconfig_pfc_g2.diff.old  ptxconfig_pfc_g2.old
ptxproj/configs/wago-pfcXXX/rules/: image-rauc.make
ptxproj/local_src/wda-frontend-example/: CMakeLists.txt  README.md
ptxproj/local_src/wda-frontend-example/c/: CMakeLists.txt  main.c
ptxproj/local_src/wda-frontend-example/cpp/: CMakeLists.txt  main.cpp
ptxproj/local_src/wda-frontend-example/libwda_proxy/: CMakeLists.txt  libwda_proxy.pc
ptxproj/local_src/wda-frontend-example/libwda_proxy/inc/: wda_proxy.h
ptxproj/local_src/wda-frontend-example/libwda_proxy/src/: wda_proxy.cpp
ptxproj/local_src/wda-frontend-example/python/: CMakeLists.txt  read-ordernumber.py
ptxproj/local_src/wda-frontend-example/script/: read-ordernumber.py
ptxproj/local_src/wda-frontend-example/src/: main.c  main.cpp  paramcom_c.cpp  paramcom_c.h
ptxproj/rules/: bootpc.make  config_dnsmasq.make  file-transfer.make  host-wago-libs-012-libloader.make  host-wago-pfc-diagnostic.make  kernel.make  libbridge.make  libcgroupcpuload.make  netconfd.make  network_config.make  print_log.make  routing-config.make  snmp-config-lib.make  wago-codesys3-018-wagocmp-tscsnmp.make  wago-config-000-base.make  wago-config-000-modular-config-tools.make  wago-custom-000-install.make  wago-libs-010-libextMemCpy.make  wago-libs-024-libwagosnmp.make  wago-parameter-service-model-files.make  wago-tools-012-eeprom-xsection.make  wago-tools-014-flash-xloader.make  wago-tools-015-automount.make  wago-tools-016-swconfig.make  wago_dbus.make  wda-frontend-example.in  wda-frontend-example.make
